IDEA-370727 moved the tests to ResultMappingTest
GitOrigin-RevId: 5081445224da9306a62174ed241e11cd7d4c1585